--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <h1>discrete bLog</h1>
+    <h1 class="landing">discrete bLog</h1>
 
     <dl>
       <dt><a href="posts/2020-01-19-Bitcoin-P2PKH-Transaction-Breakdown.html">Bitcoin P2PKH Transaction Breakdown</a></dt>
